--- a/css/style.css
+++ b/css/style.css
@@ -77,7 +77,8 @@ a:focus {
 .top-bar {
   position: relative;
   height: 90px;
-  background: #fdbe33;
+  /* background: #fdbe33; */
+  background: #ffffff;
 }
 
 .top-bar .logo {
